libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-5.jsonc
//@ run: fail
//@ description: fn/5 should error out
[
  "::kernel::special_form::fn",
  { "#tuple": [] },
  { "#struct": {} },
  "_",
  ["+", "a", "b"],
  ["*", "c", "d"]
  //~^ ERROR Remove this argument
]
